# raft-playground

./: Cargo.toml  README.md
raft-common/: Cargo.toml  build.rs
raft-common/protos/: api.proto  raft.proto
raft-common/src/: lib.rs
raft-repl/: Cargo.toml
raft-repl/src/: command.rs  data.rs  events.rs  handler.rs  history.rs  inputs.rs  main.rs  node.rs  persistence.rs  state.rs
raft-repl/src/ui/: popup.rs
raft-server/: Cargo.toml
raft-server/src/: entry.rs  env.rs  grpc.rs  id.rs  lib.rs  machine.rs  main.rs  options.rs  seed.rs  state.rs  ticking.rs  vote_listener.rs
