[package]
name = "raft-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratatui = "0.23"
ratatui-textarea = "0.3"
crossterm = "0.27"
eyre = "0.6"

[dependencies.uuid]
version = "1.4"
features = ["v4"]

[dependencies.clap]
version = "4.3"
features = ["derive"]
