[package]
name = "raft-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratatui = "0.25"
tui-textarea = "0.4"
crossterm = "0.27"
eyre = "0.6"
hyper = "0.14"
names = "0.14"
serde_json = "1"
bytes = "1.5"
directories = "5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.4"
features = ["v4"]

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.tonic]
version = "0.10"
features = ["transport"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.raft-common]
path = "../raft-common"

[dependencies.raft-server]
path = "../raft-server"