[package]
name = "raft-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
tonic = "0.10"
bytes = "1.5"
rand = "0.8.5"
hyper = "0.14"
futures = "0.3"
eyre = "0.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.raft-common]
path = "../raft-common"

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.uuid]
version = "1.4"
features = ["v4"]
